--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -25,7 +25,10 @@
 
     <!-- Mobile Toggle Button -->
     <div class="navbar-toggler" id="toggler" onclick="mobilenav()">
-        <div class="line1" id="ln1"></div>
-        <div class="line2" id="ln2"></div>
+        <div class="line1"></div>
+        <div class="line2"></div>
     </div>
 </div>
+
+<!-- Link to External JavaScript -->
+<script src="/js/navbar.js"></script>
