--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
       <div class="step">
           <img src="/images/qrimage.png" alt="Scan QR Code" class="step-image">
           <img src="/images/scanningiphone.jpeg" alt="Scan QR Code" class="step-image">
-          <p class="step-text">
+          <p class="step-text one">
               <i class="fas fa-qrcode step-icon"></i> Scan your recyclable items using our app.
           </p>
       </div>
@@ -44,7 +44,7 @@
 
       <!-- Step 2 -->
       <div class="step">
-          <p class="step-text">
+          <p class="step-text two">
               <i class="fas fa-recycle step-icon"></i> Drop them at designated collection points.
           </p>
           <img src="/images/station.jpeg" alt="Recycling Bin" class="step-image">
@@ -56,7 +56,9 @@
       <!-- Step 3 -->
       <div class="step">
           <img src="/images/bonus.png" alt="Earn Rewards" class="step-image">
-          <p class="step-text">
+          <img src="/images/bottles.png" alt="Earn Rewards" class="step-image">
+
+          <p class="step-text three">
               <i class="fas fa-gift step-icon"></i> Earn points and redeem rewards.
           </p>
       </div>
@@ -65,6 +67,8 @@
 </section>
 
     <%- include("./partials/footer.ejs") %>
+    <!-- <script src="/js/navbar.js"></script> Make sure the path is correct -->
 
 </body>
 </html>
+    
