--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -155,11 +155,11 @@
 }
 .step-text.one,
 .step-text.three {
-    margin-left: 1.8rem;
+    margin-right: 1.8rem;
 
 }
 .step-text.two{
-    margin-right:1.8rem;
+    margin-left:1.8rem;
 
 }
 
@@ -186,7 +186,7 @@
 
 /* Break Line */
 .step-divider {
-    width: 80%;
+    width: 100%;
     height: 2px;
     background: #ddd;
     margin: 10px auto;
@@ -197,16 +197,39 @@
     .how-it-works-steps .step {
         flex-direction: column;
         text-align: center;
+        
     }
     .how-it-works h2
     {
         text-align: center;
     }
-    .step-text, .step-image {
+    .step-text{
         width: 100%;
         text-align: center;
+        font-size: 1.3rem;
+        padding: 1.6rem;
+    }
+    .step-images {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        flex-wrap: nowrap;
+    }
+    .step-image {
+        width: 45%; /* Make sure they are side by side */
+        max-width: 200px;
     }
 
+    .step-text.one, 
+    .step-text.three, 
+    .step-text.two {
+        margin-left: 0cm;
+        margin-right: 0cm;
+    }
+    .step-text.two {
+        order:-1;
+    }
     .step-image {
         margin-top: 10px;
     }
