Deleted contact images

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -16,35 +16,30 @@
         <p>If you have any questions, feel free to reach out to us!</p>
 
         <div class="contact-info">
-            <p><strong>Email:</strong> support@bin2win.com</p>
-            <p><strong>Phone:</strong> +1-234-567-890</p>
+            <p><strong>Email:</strong> binwin869@gmail.com
+            </p>
             <p><strong>Address:</strong> Baku, Azerbaijan </p>
         </div>
 
         <h2>Meet Our Team</h2>
         <div class="team-container">
             <div class="team-member">
-                <img src="/images/jeyran.jpg" alt="Jeyran Imranova">
                 <h3>Jeyran Imranova</h3>
                 <p>Co-Founder & CEO</p>
             </div>
             <div class="team-member">
-                <img src="/images/rana.jpg" alt="Rana Aliyeva">
                 <h3>Rana Aliyeva</h3>
                 <p>Chief Marketing Officer</p>
             </div>
             <div class="team-member">
-                <img src="/images/maryam.jpg" alt="Maryam Babayeva">
                 <h3>Maryam Babayeva</h3>
                 <p>Head of Product Development</p>
             </div>
             <div class="team-member">
-                <img src="/images/farida.jpg" alt="Farida Shakikhanli">
                 <h3>Farida Shakikhanli</h3>
                 <p>Lead Software Engineer</p>
             </div>
             <div class="team-member">
-                <img src="/images/narmin.jpg" alt="Narmin Suleyman">
                 <h3>Narmin Suleyman</h3>
                 <p>UX/UI Designer</p>
             </div>
